fixes donate button not showing up when logged out.

--- a/sites/all/themes/asb/sass/_header.scss
+++ b/sites/all/themes/asb/sass/_header.scss
@@ -436,6 +436,7 @@
 
 #global-donate {
   @include button($height: 1.75em, $color: $brand, $radius: 4px, $font-size: 2rem);
+  right: 0;
   @include breakpoint( md, max-width ) {
     width: 100%;
     @include border-radius(0);
